--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
     <body>
         <h1 class="hidden">Responsive Scaffhold</h1>
-        <header class="grid-con center-grid-con">
+        <header id="header" class="grid-con center-grid-con">
+            <!--heading format is ok?-->
             <div class="box col-start-1 col-end-4 m-col-start-1 m-col-end-3 l-col-start-1 l-col-end-3">Logo</div>
             <nav class="box col-start-4 col-end-5 m-col-start-3 m-col-end-13 l-col-start-3 l-col-end-13">Nav</nav>
         </header>
