--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-   <!-- in mobile set initial zoom level of page to 100%, set site size to equal device size-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/grid.css" rel="stylesheet" type="text/css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -11,22 +10,24 @@
     <body>
         <h1 class="hidden">Responsive Scaffhold</h1>
         <header id="header" class="grid-con center-grid-con">
-            <!--heading format is ok?-->
             <div class="box col-start-1 col-end-4 m-col-start-1 m-col-end-3 l-col-start-1 l-col-end-3">Logo</div>
             <nav class="box col-start-4 col-end-5 m-col-start-3 m-col-end-13 l-col-start-3 l-col-end-13">Nav</nav>
         </header>
 
         <main>
             <section id="hero" class="grid-con center-grid-con">
+                <h2 class="hidden">Hero Image</h2>
                 <div class="box col-span-full">Hero Image</div>
             </section>
             
             <section id="products" class="grid-con center-grid-con">
+                <h2 class="hidden">Products</h2>
                 <div class="box col-span-full m-col-start-1 m-col-end-7 l-col-start-1 l-col-end-7">Product 1</div>
                 <div class="box col-span-full m-col-start-7 m-col-end-13 l-col-start-7 l-col-end-13">Product 2</div>
             </section>
             
             <section id="services" class="grid-con center-grid-con">
+                <h2 class="hidden">Services</h2>
             <div class="box col-start-1 col-end-3  m-col-start-1 m-col-end-5 l-col-start-1 l-col-end-4">Service 1</div>
             <div class="box col-start-3 col-end-5 m-col-start-5 m-col-end-9 l-col-start-4 l-col-end-7">Service 2</div>
             <div class="box col-start-1 col-end-3 m-col-start-9 m-col-end-13 l-col-start-7 l-col-end-10">Service 3</div>
@@ -39,6 +40,7 @@
 
         <footer>
             <section id="footer" class="grid-con center-grid-con">
+                <h2 class="hidden">Footer</h2>
                 <div class="box col-span-full">Footer</div>
             </section>
         </footer>
